--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng build & ts-node ./index.ts",
+    "start": "node ./parser.js & ng build & tsc ./index.ts & node ./index.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@types/express": "^4.16.1",
+    "body-parser": "^1.19.0",
     "core-js": "^2.5.4",
     "express": "^4.17.0",
     "rxjs": "~6.3.3",
@@ -32,6 +33,7 @@
     "@angular/cli": "~7.3.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/body-parser": "^1.17.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
